# GameOfLife

./: CMakeLists.txt  CellOfLife.cpp  CellOfLife.hpp  ConsoleMenu.cpp  ConsoleMenu.hpp  Create  FieldAnalyzer.cpp  FieldAnalyzer.hpp  FieldLoader.cpp  FieldLoader.hpp  GameController.cpp  GameController.hpp  GameOfLife  README.md  Randomizer.cpp  Randomizer.hpp  ShowManager.cpp  ShowManager.hpp  main.cpp
txt/: FieldLoadFile_2.txt  FieldLoadFile_6.txt
